<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ggg.espressoexample.login.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Entrar"
        android:textSize="16sp"/>


</RelativeLayout>
